src/codata_constants_2014_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_HARTREE_RELATIONSHIP_2014") ::&
capi_106_2014 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "h", "a", "r", "t", "r", "e", &
"e", " ", "r", "e", "l", "a", "t", "i", "o", "n", &
"s", "h", "i", "p", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_HARTREE_RELATIONSHIP_2014%value, &
ELECTRON_VOLT_HARTREE_RELATIONSHIP_2014%uncertainty, &
[ &
"E", "_", "h", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_HERTZ_RELATIONSHIP_2014") ::&
capi_107_2014 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "h", "e", "r", "t", "z", " ", &
"r", "e", "l", "a", "t", "i", "o", "n", "s", "h", &
"i", "p", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_HERTZ_RELATIONSHIP_2014%value, &
ELECTRON_VOLT_HERTZ_RELATIONSHIP_2014%uncertainty, &
[ &
"H", "z", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2014") ::&
capi_108_2014 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "i", "n", "v", "e", "r", "s", &
"e", " ", "m", "e", "t", "e", "r", " ", "r", "e", &
"l", "a", "t", "i", "o", "n", "s", "h", "i", "p", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2014%value, &
ELECTRON_VOLT_INVERSE_METER_RELATIONSHIP_2014%uncertainty, &
[ &
"m", "^", "-", "1", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_JOULE_RELATIONSHIP_2014") ::&
capi_109_2014 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "j", "o", "u", "l", "e", " ", &
"r", "e", "l", "a", "t", "i", "o", "n", "s", "h", &
"i", "p", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_JOULE_RELATIONSHIP_2014%value, &
ELECTRON_VOLT_JOULE_RELATIONSHIP_2014%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_KELVIN_RELATIONSHIP_2014") ::&
capi_110_2014 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "k", "e", "l", "v", "i", "n", &
" ", "r", "e", "l", "a", "t", "i", "o", "n", "s", &
"h", "i", "p", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_KELVIN_RELATIONSHIP_2014%value, &
ELECTRON_VOLT_KELVIN_RELATIONSHIP_2014%uncertainty, &
[ &
"K", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2014") ::&
capi_111_2014 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "v", &
"o", "l", "t", "-", "k", "i", "l", "o", "g", "r", &
"a", "m", " ", "r", "e", "l", "a", "t", "i", "o", &
"n", "s", "h", "i", "p", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2014%value, &
ELECTRON_VOLT_KILOGRAM_RELATIONSHIP_2014%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELEMENTARY_CHARGE_2014") ::&
capi_112_2014 = capi_constant_type([ &
"e", "l", "e", "m", "e", "n", "t", "a", "r", "y", &
" ", "c", "h", "a", "r", "g", "e", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELEMENTARY_CHARGE_2014%value, &
ELEMENTARY_CHARGE_2014%uncertainty, &
[ &
"C", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELEMENTARY_CHARGE_OVER_H_2014") ::&
capi_113_2014 = capi_constant_type([ &
"e", "l", "e", "m", "e", "n", "t", "a", "r", "y", &
" ", "c", "h", "a", "r", "g", "e", " ", "o", "v", &
"e", "r", " ", "h", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELEMENTARY_CHARGE_OVER_H_2014%value, &
ELEMENTARY_CHARGE_OVER_H_2014%uncertainty, &
[ &
"A", " ", "J", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FARADAY_CONSTANT_2014") ::&
capi_114_2014 = capi_constant_type([ &
"F", "a", "r", "a", "d", "a", "y", " ", "c", "o", &
"n", "s", "t", "a", "n", "t", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FARADAY_CONSTANT_2014%value, &
FARADAY_CONSTANT_2014%uncertainty, &
[ &
"C", " ", "m", "o", "l", "^", "-", "1", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FARADAY_CONSTANT_FOR_CONVENTIONAL_ELECTRIC_CURRENT_2014") ::&
capi_115_2014 = capi_constant_type([ &
"F", "a", "r", "a", "d", "a", "y", " ", "c", "o", &
"n", "s", "t", "a", "n", "t", " ", "f", "o", "r", &
" ", "c", "o", "n", "v", "e", "n", "t", "i", "o", &
"n", "a", "l", " ", "e", "l", "e", "c", "t", "r", &
"i", "c", " ", "c", "u", "r", "r", "e", "n", "t", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FARADAY_CONSTANT_FOR_CONVENTIONAL_ELECTRIC_CURRENT_2014%value, &
FARADAY_CONSTANT_FOR_CONVENTIONAL_ELECTRIC_CURRENT_2014%uncertainty, &
[ &
"C", "_", "9", "0", " ", "m", "o", "l", "^", "-", &
"1", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FERMI_COUPLING_CONSTANT_2014") ::&
capi_116_2014 = capi_constant_type([ &
"F", "e", "r", "m", "i", " ", "c", "o", "u", "p", &
"l", "i", "n", "g", " ", "c", "o", "n", "s", "t", &
"a", "n", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FERMI_COUPLING_CONSTANT_2014%value, &
FERMI_COUPLING_CONSTANT_2014%uncertainty, &
[ &
"G", "e", "V", "^", "-", "2", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FINE_STRUCTURE_CONSTANT_2014") ::&
capi_117_2014 = capi_constant_type([ &
"f", "i", "n", "e", "-", "s", "t", "r", "u", "c", &
"t", "u", "r", "e", " ", "c", "o", "n", "s", "t", &
"a", "n", "t", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FINE_STRUCTURE_CONSTANT_2014%value, &
FINE_STRUCTURE_CONSTANT_2014%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FIRST_RADIATION_CONSTANT_2014") ::&
capi_118_2014 = capi_constant_type([ &
"f", "i", "r", "s", "t", " ", "r", "a", "d", "i", &
"a", "t", "i", "o", "n", " ", "c", "o", "n", "s", &
"t", "a", "n", "t", c_null_char, " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FIRST_RADIATION_CONSTANT_2014%value, &
FIRST_RADIATION_CONSTANT_2014%uncertainty, &
[ &
"W", " ", "m", "^", "2", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2014") ::&
capi_119_2014 = capi_constant_type([ &
"f", "i", "r", "s", "t", " ", "r", "a", "d", "i", &
"a", "t", "i", "o", "n", " ", "c", "o", "n", "s", &
"t", "a", "n", "t", " ", "f", "o", "r", " ", "s", &
"p", "e", "c", "t", "r", "a", "l", " ", "r", "a", &
"d", "i", "a", "n", "c", "e", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2014%value, &
FIRST_RADIATION_CONSTANT_FOR_SPECTRAL_RADIANCE_2014%uncertainty, &
[ &
"W", " ", "m", "^", "2", " ", "s", "r", "^", "-", &
"1", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2014") ::&
capi_120_2014 = capi_constant_type([ &
"h", "a", "r", "t", "r", "e", "e", "-", "a", "t", &
"o", "m", "i", "c", " ", "m", "a", "s", "s", " ", &
"u", "n", "i", "t", " ", "r", "e", "l", "a", "t", &
"i", "o", "n", "s", "h", "i", "p", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2014%value, &
HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP_2014%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
